--- a/annie-demo.html
+++ b/annie-demo.html
@@ -18,7 +18,7 @@
                         payload: {
                             environment: 'production',
                             //context: 'home/index',
-                            //trace_id: 'abc123',
+                            trace_id: 'abc123',
                             client: {
                               javascript: {
                                 code_version: '1.0.0',
